[package]
name = "line-tables-only"
version = "0.1.0"
edition = "2018"

[build-dependencies]
cc = "1.0"

[dependencies]
libc = { "https://github.com/lewis-revill/libc-cheri.git", branch = "ljr-cheri-0.2.135", default-features = false }

[dependencies.backtrace]
path = "../.."
features = [
  'libunwind',
  'std',
]

[features]
libbacktrace = ['backtrace/libbacktrace']
gimli-symbolize = ['backtrace/gimli-symbolize']
