[package]
name = "line-tables-only"
version = "0.1.0"
edition = "2018"

[build-dependencies]
cc = "1.0"

[dependencies]
libc = { git = "https://github.com/lewis-revill/libc-cheri.git", branch = "0.2.135-rustc-patches", default-features = false }

[dependencies.backtrace]
path = "../.."
features = [
  'libunwind',
  'std',
]

[features]
libbacktrace = ['backtrace/libbacktrace']
gimli-symbolize = ['backtrace/gimli-symbolize']
